kubernetes-stack/yamls-pre-chaos/istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /mg
    rewrite:
      uri: " "
    route:
    - destination:
        port:
          number: 8081
        host: mg-v1
        subset: primary
  - match:
    - uri:
        prefix: /read
    rewrite:
      uri: " "
    route:
    - destination:
        port:
          number: 8088
        host: ms-read
        subset: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mg-v1
spec:
  host: mg-v1
  subsets:
  - name: primary
    labels:
      app: mg-backend

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-read
spec:
  host: ms-read
  subsets:
  - name: primary
    labels:
      app: read-app
      component: ms-read
